# pir9

./: .dockerignore  .env.example  .env.postgres  .events.jsonl  .gitignore  .grype.yaml  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.api  Dockerfile.frontend  LICENSE  Makefile  README.md  TODO-LINT.md  TODO.md  build.rs  docker-compose.simple.yml  docker-compose.synology-worker.yml  docker-compose.yml  main.go  mental-model.md  package-lock.json  package.json  sbom.cdx.json
.beads/: .beads-credential-key  interactions.jsonl  last-touched
.beads/backup/: backup_state.json  manifest
.beads/dolt/: .beads-credential-key
.cargo/: audit.toml
.claude/: settings.json
.claude/hooks/: check-biome.sh  check-security.sh
.claude/skills/db-migration/: SKILL.md
.claude/skills/docker-infra/: SKILL.md
.claude/skills/download-client/: SKILL.md
.claude/skills/frontend-component/: SKILL.md
.claude/skills/frontend-patterns/: SKILL.md
.claude/skills/frontend-store/: SKILL.md
.claude/skills/imdb-service/: SKILL.md
.claude/skills/mental-model/: SKILL.md
.claude/skills/parser-dev/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/rust-api/: SKILL.md
.claude/skills/rust-patterns/: SKILL.md
.claude/skills/security-audit/: SKILL.md
.claude/skills/sonarr-compat/: SKILL.md
.claude/skills/trace/: SKILL.md
.context/: anti-patterns.md  boundaries.md  debt.md  events.md  glossary.md
.context/decisions/: 001-axum-framework.md  002-sonarr-v3-compatibility.md  003-sqlx-compile-time-queries.md  004-dual-sqlite-postgres.md  005-event-bus-architecture.md  006-consolidate-postgres.md  README.md
.dolt-data/: config.yaml
.dolt-data/gt/.dolt/: repo_state.json
.dolt-data/hq/.dolt/: repo_state.json
.github/: dependabot.yml
.github/workflows/: rust.yml
.runtime/: session_id
.runtime/heartbeats/: gt-dag.json  gt-toast.json
.runtime/pids/: gt-capable.pid  gt-dag.pid  gt-dementus.pid  gt-furiosa.pid  gt-nux.pid  gt-rictus.pid  gt-slit.pid  gt-toast.pid  gt-witness.pid  hq-deacon.pid  hq-dog-alpha.pid  hq-dog-bravo.pid  hq-dog-charlie.pid  hq-dog-delta.pid
.sbom/: sbom.cdx.json
client/: main.cs
config/: .db_password
db/: fleet.db
docker/: entrypoint.sh  nginx.conf  worker-healthcheck.sh
docs/: BACKLOG.md  distributed-scanning.md
frontend/: biome.json  index.html  package-lock.json  package.json  rolldown.config.ts  rollup.config.js  stats.html  tsconfig.json  vite.config.ts
frontend/src/: app.ts  main.ts  router.ts
frontend/src/components/: release-search-modal.ts
frontend/src/core/: component.ts  http.ts  query.ts  reactive.ts  websocket.ts
frontend/src/features/: not-found-page.ts
frontend/src/stores/: app.store.ts  theme.store.ts
frontend/src/styles/: base.css  themes.css
migration/: Cargo.toml
migrations/: 001_initial_schema.sql  002_logs.sql  003_imdb_data.sql  004_fix_imdb_sync_status.sql  005_imdb_sync_resumable.sql  006_download_queue.sql  007_movies.sql  008_notification_add_events.sql  009_import_exclusions.sql  010_delay_profiles_pending_releases.sql  011_import_lists.sql  012_release_profiles.sql  014_podcasts.sql  015_audiobooks.sql  017_tracked_download_content_type.sql  018_album_title_slug.sql  019_tracked_download_artist_id.sql  020_tracked_download_audiobook_id.sql
migrations/postgres/: 001_initial_schema.sql  002_schema_sync.sql  003_additional_tables.sql  004_imdb_enrichment.sql  005_movies.sql  006_file_hash.sql  007_fix_timestamp_types.sql  008_queue_movie_support.sql  009_history_nullable_episode.sql  010_episode_ordering.sql  011_root_folder_content_type.sql  012_scan_jobs.sql  013_notification_add_events.sql  014_import_exclusions.sql  015_delay_profiles_pending_releases.sql  016_import_lists.sql  017_release_profiles.sql  018_music.sql  019_podcasts.sql  020_audiobooks.sql  021_album_secondary_types.sql  022_tracked_download_content_type.sql  023_album_title_slug.sql  024_tracked_download_artist_id.sql  025_tracked_download_audiobook_id.sql  026_fix_timestamp_types.sql  027_drop_dead_tables.sql  028_text_to_jsonb.sql  029_add_path_index.sql
models/: ship.go
pir9/.beads/: metadata.json
reg/: deploy.sh  nas.sh  nastoo.sh
scripts/: imdb-sync.sh  manage-rootfolders.sh  mb-sync.sh
server/db/: fleet.db
server/models/: ship.go
services/pir9-imdb/: .dockerignore  Cargo.toml  Dockerfile
services/pir9-imdb/migrations/: 001_initial_schema.sql  002_movies.sql  003_tvmaze_checked_at.sql  004_tmdb_fields.sql  005_people_credits.sql  006_series_network.sql  007_movie_enrichment.sql  008_trgm_search_indexes.sql
services/pir9-imdb/src/: db.rs  main.rs  models.rs  sync.rs  tmdb.rs  tvmaze.rs
services/pir9-musicbrainz/: Cargo.toml  Dockerfile
services/pir9-musicbrainz/migrations/: 001_initial_schema.sql  002_additional_datasets.sql  003_release_tracks.sql
services/pir9-musicbrainz/src/: db.rs  main.rs  models.rs  sync.rs
src/: cli.rs  cli_args.rs  main.rs
src/api/: mod.rs  models.rs
src/api/localization/: en.json
src/api/v3/: autotagging.rs  backup.rs  blocklist.rs  calendar.rs  command.rs  config.rs  customfilter.rs  customformat.rs  delayprofile.rs  diskspace.rs  downloadclient.rs  episode.rs  episodefile.rs  filesystem.rs  health.rs  history.rs  importlist.rs  indexer.rs  indexerflag.rs  language.rs  languageprofile.rs  localization.rs  log.rs  manualimport.rs  mediacover.rs  metadata.rs  mod.rs  movie.rs  notification.rs  parse.rs  qualitydefinition.rs  qualityprofile.rs  queue.rs  release.rs  releaseprofile.rs  remotepathmapping.rs  rename.rs  rootfolder.rs  seasonpass.rs  series.rs  (+6 more)
src/api/v5/: audiobook.rs  blocklist.rs  calendar.rs  command.rs  config.rs  customfilter.rs  customformat.rs  diskspace.rs  download.rs  episodefile.rs  episodes.rs  filesystem.rs  health.rs  history.rs  imdb.rs  importexclusion.rs  (+25 more)
src/core/: configuration.rs  delay.rs  imdb.rs  importlists.rs  logging.rs  metadata.rs  mod.rs  musicbrainz.rs  naming.rs  release_scoring.rs  scheduler.rs  tmdb.rs  tvdb.rs  tvmaze.rs  worker.rs
src/web/: mod.rs
(+169 files in other folders)
