[package]
name = "pir9"
version = "0.47.3"
edition = "2021"
rust-version = "1.93"
authors = ["pir9 Team"]
description = "pir9 - Smart PVR for TV and anime"
license = "GPL-3.0"
repository = "https://github.com/pir9/pir9"

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }

# Web framework
axum = { version = "0.8", features = ["ws", "multipart"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace", "compression-gzip", "compression-br", "compression-deflate", "normalize-path"] }
hyper = { version = "1.5", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.4"
toml = "0.8"

# Database (PostgreSQL only)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono", "uuid", "json"] }
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-json", "with-uuid"], optional = true }
migration = { path = "./migration", optional = true }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "multipart", "cookies"], default-features = false }
hyper-util = "0.1"

# RSS/Atom parsing
rss = "2.0"
atom_syndication = "0.12"

# XML parsing
quick-xml = { version = "0.37", features = ["serialize"] }

# HTML parsing
scraper = "0.22"

# Regex
regex = "1.10"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3.46", features = ["serde", "formatting", "parsing"] }

# Scheduling
cron = "0.15"
tokio-cron-scheduler = "0.13"

# File system operations
walkdir = "2.5"
notify = "8.0"

# Path utilities
pathdiff = "0.2"
path-absolutize = "3.1"

# Hashing
sha1 = "0.10"
sha2 = "0.10"
blake3 = "1.5"
hex = "0.4"

# Encoding/Base64
base64 = "0.22"
percent-encoding = "2.3"
urlencoding = "2.1"

# Compression
tar = "0.4"
zip = "2.2"
flate2 = "1.0"
bzip2 = "0.5"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
log = "0.4"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Configuration
config = "0.15"
dotenvy = "0.15"

# Validation
validator = { version = "0.20", features = ["derive"] }

# Authentication & Security
argon2 = "0.5"
bcrypt = "0.15"
rand = "0.8"

# Session management
tower-sessions = "0.14"
tower-sessions-sqlx-store = "0.14"
cookie = { version = "0.18", features = ["percent-encode"] }

# API Documentation
utoipa = { version = "5.3", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "8.1", features = ["axum"] }

# Real-time communication
tokio-tungstenite = "0.26"
futures = "0.3"
futures-util = "0.3"
stream-cancel = "0.8"

# Rate limiting
governor = "0.8"

# Caching
dashmap = "6.1"
moka = { version = "0.12", features = ["future"] }

# Background jobs - using custom scheduler in src/core/scheduler.rs
# apalis removed - not used and conflicts with sqlx 0.8

# Media info (requires libmediainfo system library)
mediainfo = { version = "0.2", optional = true }

# Media probing via FFmpeg (requires FFmpeg dev libraries)
unbundle = { version = "5.0", optional = true }

# Redis (for distributed event bus)
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"], optional = true }

# Torrent/Bittorrent
librqbit = { version = "5.3", optional = true }

# Usenet/NNTP
# nntp-client = { version = "0.1", optional = true }

# Internationalization
rust-embed = { version = "8.5", features = ["interpolate-folder-path"] }
i18n-embed = { version = "0.15", features = ["fluent-system"] }
i18n-embed-fl = "0.9"
unic-langid = "0.9"

# Utilities
itertools = "0.14"
once_cell = "1.19"
lazy_static = "1.4"
parking_lot = "0.12"
async-trait = "0.1"
dyn-clone = "1.0"
enum_dispatch = "0.3"
strum = { version = "0.27", features = ["derive"] }
num-traits = "0.2"
num-derive = "0.4"

# System (Unix-specific for disk space checks)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Testing
tokio-test = "0.4"
mockall = "0.13"
wiremock = "0.6.5"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Development
rust_decimal = { version = "1.36", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
indexmap = { version = "2.7", features = ["serde"] }
dirs = "6.0"
sanitize-filename = "0.6"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
insta = { version = "1.46", features = ["json", "redactions"] }
pretty_assertions = "1.4"

[features]
default = ["postgres", "redis-events", "media-probe"]
postgres = ["sqlx/postgres"]
seaorm = ["sea-orm"]
torrent = ["librqbit"]
redis-events = ["redis"]
media-probe = ["unbundle"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
opt-level = 0

[[bin]]
name = "pir9"
path = "src/main.rs"

[[bin]]
name = "pir9-cli"
path = "src/cli.rs"
