[package]
name = "pir9-musicbrainz"
version = "0.2.0"
edition = "2021"
rust-version = "1.93"
authors = ["pir9 Team"]
description = "MusicBrainz data service for pir9"
license = "GPL-3.0"

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full", "rt-multi-thread"] }

# Web framework
axum = { version = "0.8", features = ["ws"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database (PostgreSQL)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono"] }

# HTTP client (for downloading MusicBrainz datasets)
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Compression (for MusicBrainz .tar.xz files)
xz2 = "0.1"
tar = "0.4"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Configuration
dotenvy = "0.15"

# Utilities
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["rt"] }
xxhash-rust = { version = "0.8", features = ["xxh64"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "pir9-musicbrainz"
path = "src/main.rs"
